--- a/src/css/pages/scss/project.scss
+++ b/src/css/pages/scss/project.scss
@@ -1,11 +1,15 @@
-
+body {
+    height: 600vh;
+}
 
 #project {
     height: 100%;
+    width: 100%;
     background-color: var(--black);
     color: var(--white);
     display: flex;
     align-items: center;
+    border: 1px solid #f60000;
 
 
     .inner {
@@ -17,10 +21,12 @@
 
                 .mn {
                     font-family: var(--font-family-Eng);
-                    span{
+
+                    span {
                         padding: 0 10px;
                     }
-                   .cursor-box{
+
+                    .cursor-box {
                         border: 1px solid #828282;
                     }
                 }
@@ -484,6 +490,7 @@
 @media (min-width:1100px) {
     #project {
         height: 100vh;
+        background-color: var(--black);
 
         .inner {
             width: 90%;
