--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -21,10 +21,14 @@
   #about .about-banner {
     height: 80px;
   }
-  #about .about-banner span {
-    font-size: 1.3rem;
+  #about .about-banner li {
+    font-size: 1.8rem;
+    white-space: nowrap;
   }
-  #about .inner figure {
+  #about .inner {
+    flex-direction: column;
+  }
+  #about .inner .me {
     width: 100%;
     height: 100%;
     gap: 10%;
@@ -33,66 +37,75 @@
     align-items: center;
     justify-content: center;
   }
-  #about .inner figure > .mobile {
+  #about .inner .me .mobile {
     display: block;
     width: 90%;
+    margin: auto;
     border-radius: 25px;
+    border: 3px solid transparent;
+    background-image: linear-gradient(#000, #000), linear-gradient(300deg, #e657af, #0049ff, #43cf2e);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
   }
-  #about .inner figure .pc {
+  #about .inner .me .pc {
     display: none;
   }
-  #about .inner figure figcaption p {
-    font-size: 1.5rem;
+  #about .inner .sticky .desc h2 {
+    text-align: center;
+    font-size: 2rem;
+    line-height: 3rem;
+    font-weight: 600;
+  }
+  #about .inner .sticky .desc p {
+    margin-top: 30px;
+    line-height: 2rem;
+    font-size: 16px;
+  }
+  #about .inner .sticky .desc p br {
+    display: none;
+  }
+  #about .inner .sticky .name {
+    margin-top: 8%;
+  }
+  #about .inner .sticky .name p {
     margin: 20px 0;
   }
-  #about .inner figure figcaption p span {
+  #about .inner .sticky .name p span {
     margin-right: 30px;
   }
-  #about .inner figure figcaption p span.kor {
-    font-size: 1rem;
+  #about .inner .sticky .name p span:nth-child(1) {
+    font-weight: normal;
   }
-  #about .inner figure figcaption p span:nth-child(1) {
-    font-weight: bold;
+  #about .inner .sticky .name .skill p {
+    font-weight: normal;
   }
-  #about .inner figure figcaption .skill {
-    width: 100%;
-  }
-  #about .inner figure figcaption .skill p {
-    font-weight: bold;
-  }
-  #about .inner figure figcaption .skill ul {
-    width: 100%;
+  #about .inner .sticky .name .skill ul {
     gap: 20px;
-    flex-wrap: wrap;
-    align-items: center;
   }
-  #about .inner figure figcaption .skill ul li {
-    width: 10%;
+  #about .inner .sticky .name .skill ul li {
+    width: 40px;
   }
-  #about .inner figure figcaption .skill ul li img {
+  #about .inner .sticky .name .skill ul li img {
     width: 100%;
     transition: 0.35s;
   }
-  #about .inner figure figcaption .skill ul li:hover img {
+  #about .inner .sticky .name .skill ul li:hover img {
     transform: rotate(5deg) scale(1.2);
   }
-  #about .inner .word {
+  #about .inner .sticky .word {
     margin-top: 3%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  #about .inner .word ul {
+  #about .inner .sticky .word ul {
     flex-wrap: wrap;
     align-items: center;
   }
-  #about .inner .word ul li {
-    font-size: 3.5rem;
+  #about .inner .sticky .word ul li {
+    font-size: 1.5rem;
     margin: 20px 10px;
-  }
-  #about .inner .word ul li.kor {
-    font-size: 2.5rem;
   }
 }
 @media (min-width: 701px) {
