--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -27,14 +27,17 @@
         .about-banner {
             height: 80px;
 
-            span {
-                font-size: 1.3rem;
-            
+            li {
+                font-size: 1.8rem;
+                white-space: nowrap;
             }
         }
 
         .inner {
-            figure {
+           
+            flex-direction: column;
+
+            .me {
                 width: 100%;
                 height: 100%;
                 gap: 10%;
@@ -43,49 +46,68 @@
                 align-items: center;
                 justify-content: center;
 
-                >.mobile {
+                .mobile {
                     display: block;
                     width: 90%;
+                    margin: auto;
                     border-radius: 25px;
+                    border: 3px solid transparent;
+                    background-image: linear-gradient(#000, #000), linear-gradient(300deg, #e657af, #0049ff, #43cf2e);
+                    background-origin: border-box;
+                    background-clip: content-box, border-box;
                 }
 
                 .pc {
                     display: none;
                 }
 
-                figcaption {
+            }
+
+            .sticky {
+               
+                .desc {
+                    h2 {
+                        text-align: center;
+                        font-size: 2rem;
+                        line-height: 3rem;
+                        font-weight: 600;
+                    }
+
                     p {
-                        font-size: 1.5rem;
+                        margin-top: 30px;
+                        line-height: 2rem;
+                        font-size: 16px;
+                        br{
+                            display: none;
+                        }
+                    }
+                }
+
+                .name {
+                    margin-top: 8%;
+
+                    p {
                         margin: 20px 0;
 
                         span {
                             margin-right: 30px;
 
-                            &.kor {
-                                font-size: 1rem;
-                            }
-
                             &:nth-child(1) {
-                                font-weight: bold;
+                                font-weight: normal;
                             }
                         }
                     }
 
                     .skill {
-                        width: 100%;
-
                         p {
-                            font-weight: bold;
+                            font-weight: normal;
                         }
 
                         ul {
-                            width: 100%;
                             gap: 20px;
-                            flex-wrap: wrap;
-                            align-items: center;
 
                             li {
-                                width: 10%;
+                                width: 40px;
 
                                 img {
                                     width: 100%;
@@ -99,32 +121,31 @@
                         }
                     }
                 }
-            }
-
-            .word {
-                margin-top: 3%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
 
 
-                ul {
-
-                    flex-wrap: wrap;
+                .word {
+                    margin-top: 3%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
                     align-items: center;
 
-                    li {
-                        font-size: 3.5rem;
-                        margin: 20px 10px;
 
-                        &.kor {
-                            font-size: 2.5rem;
+                    ul {
+                        flex-wrap: wrap;
+                        align-items: center;
+
+                        li {
+                            font-size: 1.5rem;
+                            margin: 20px 10px;
+
                         }
                     }
-                }
 
+                }
             }
+
+
         }
     }
 }
@@ -154,6 +175,7 @@
                 height: 100vh;
                 position: sticky;
                 top: 0%;
+
                 >div {
                     position: absolute;
                     width: 90%;
