--- a/src/css/pages/scss/header.scss
+++ b/src/css/pages/scss/header.scss
@@ -5,6 +5,7 @@
     width: 100%;
     z-index: 99;
     font-family: var(--font-family-Eng);
+    transition: .4s;
 
     .header__inner {
         display: flex;
@@ -166,4 +167,19 @@
     }
 
 
+}
+
+@media (min-width:801px) {
+    #header.on {
+        top: -100px;
+    }
+    #header{
+        li{
+            a{
+                &.on{
+                   border: 1px solid #ffffff; 
+                }
+            }
+        }
+    }
 }
