--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -105,7 +105,7 @@
 
             .img01,
             &.work01::before {
-                background-image: url(/src/assets/work.jpg);
+                background-image: url(/src/assets/work1.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
@@ -119,7 +119,7 @@
 
             .img03,
             &.work03::before {
-                background-image: url(/src/assets/work3.webp);
+                background-image: url(/src/assets/work3.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
@@ -133,69 +133,76 @@
 
             .img05,
             &.work05::before {
-                background-image: url(/src/assets/work5.jpg);
+                background-image: url(/src/assets/work05.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img06,
             &.work06::before {
-                background-image: url(/src/assets/work6.jpg);
+                background-image: url(/src/assets/work06.png);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img07,
             &.work07::before {
-                background-image: url(/src/assets/work7.jpg);
+                background-image: url(/src/assets/work6.png);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img08,
             &.work08::before {
-                background-image: url(/src/assets/work8.jpg);
+                background-image: url(/src/assets/work7.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img09,
             &.work09::before {
-                background-image: url(/src/assets/work9.webp);
+                background-image: url(/src/assets/work8.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img10,
             &.work10::before {
-                background-image: url(/src/assets/work10.jpg);
+                background-image: url(/src/assets/work9.webp);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img11,
             &.work11::before {
-                background-image: url(/src/assets/work11.jpg);
+                background-image: url(/src/assets/work10.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img12,
             &.work12::before {
-                background-image: url(/src/assets/work12.jpg);
+                background-image: url(/src/assets/work11.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img13,
             &.work13::before {
-                background-image: url(/src/assets/work13.jpg);
+                background-image: url(/src/assets/work12.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img14,
             &.work14::before {
+                background-image: url(/src/assets/work13.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img15,
+            &.work15::before {
                 background-image: url(/src/assets/work14.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
@@ -345,24 +352,23 @@
                     height: 350px;
                     padding: 5%;
                     margin: auto;
-                    &.work8{
-                        .list-title{
 
-                        }
+                    &.work8 {
+                        .list-title {}
                     }
 
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        background-position: center center;
-                        background-size: cover;
-                        background-repeat: no-repeat;
-                        filter: brightness(0.1);
-                    }
+                    // &::before {
+                    //     content: '';
+                    //     position: absolute;
+                    //     top: 0;
+                    //     left: 0;
+                    //     width: 100%;
+                    //     height: 100%;
+                    //     background-position: center center;
+                    //     background-size: cover;
+                    //     background-repeat: no-repeat;
+                    //     filter: brightness(0.1);
+                    // }
 
                     &:hover .img-box {
                         clip-path: circle(100% at 50% 50%);
@@ -472,6 +478,7 @@
 
                             .icon {
                                 align-items: center;
+
                                 img {
                                     height: 40px;
                                 }
@@ -604,6 +611,10 @@
                             transform: translateY(0);
                         }
 
+                        &.on .icon {
+                            transform: translateY(0);
+                        }
+
                         a {
                             display: block;
                             color: #fff;
@@ -622,6 +633,11 @@
                                 padding: 0 5px;
                                 transform: translateY(50px);
                                 transition: .45s;
+                            }
+
+                            .icon {
+                                transform: translateY(50px);
+                                transition: .65s;
                             }
                         }
                     }
@@ -642,10 +658,10 @@
                         height: 400px;
                         position: relative;
 
-                        &:hover .img-box {
-                            clip-path: circle(100% at 50% 50%);
-                            filter: brightness(1);
-                        }
+                        // &:hover .img-box {
+                        //     clip-path: circle(100% at 50% 50%);
+                        //     filter: brightness(1);
+                        // }
 
                         &:hover .img01 {
                             filter: brightness(.6);
@@ -709,7 +725,7 @@
                             background-position: center center;
                             background-size: cover;
                             background-repeat: no-repeat;
-                            filter: brightness(0.1);
+
                         }
 
 
@@ -719,23 +735,24 @@
                             width: 100%;
                             height: 100%;
                             overflow: hidden;
-                            .icon{
+
+                            .icon {
                                 display: none;
                             }
 
-                            .img-box {
-                                position: absolute;
-                                top: 0;
-                                left: 0;
-                                width: 100%;
-                                height: 100%;
-                                background-position: center center;
-                                background-size: cover;
-                                background-repeat: no-repeat;
-                                /* 마스크 이용해서 안보이게 하는 영역 */
-                                clip-path: circle(20% at 50% 50%);
-                                transition: .6s;
-                            }
+                            // .img-box {
+                            //     position: absolute;
+                            //     top: 0;
+                            //     left: 0;
+                            //     width: 100%;
+                            //     height: 100%;
+                            //     background-position: center center;
+                            //     background-size: cover;
+                            //     background-repeat: no-repeat;
+                            //     /* 마스크 이용해서 안보이게 하는 영역 */
+                            //     clip-path: circle(20% at 50% 50%);
+                            //     transition: .6s;
+                            // }
 
                             .list-title {
                                 position: absolute;
@@ -747,6 +764,13 @@
                                 // text-align: center;
                                 font-size: 20rem;
                                 width: 100%;
+
+                                h3 {
+                                    font-size: 4rem;
+                                    // -webkit-text-stroke: 1px var(--mainColor100-color);
+                                    // -webkit-text-fill-color: transparent;
+                                    margin-bottom: 10px;
+                                }
                             }
 
                             .explanation {
@@ -856,6 +880,12 @@
                             display: block;
                             color: #fff;
 
+                            h2 {
+                                -webkit-text-stroke: 1px var(--mainColor100-color);
+                                -webkit-text-fill-color: transparent;
+                                font-size: 7rem;
+                            }
+
                             p {
                                 color: var(--mainColor100-color);
                                 font-size: 1.3rem;
@@ -883,6 +913,13 @@
                                         height: 50px;
                                     }
 
+
+                                }
+
+                                h2 {
+                                    -webkit-text-stroke: 1px var(--mainColor100-color);
+                                    -webkit-text-fill-color: transparent;
+                                    font-size: 7rem;
                                 }
                             }
 
@@ -905,19 +942,25 @@
                         height: 400px;
                         border: 1px solid var(--mainColor300-color);
                         position: relative;
-
-                        &::before {
+                        overflow: hidden;
+                        &:hover .list-title{
+                            bottom: 30%;
+                            transform: translateY(0,-50%);
+                        }
+                        &:hover::after{
+                            opacity: 1;
+                        }
+                        &::after{
                             content: '';
                             position: absolute;
-                            top: 0;
-                            left: 0;
                             width: 100%;
                             height: 100%;
-                            background-position: center center;
-                            background-size: cover;
-                            background-repeat: no-repeat;
-                            filter: brightness(0.1);
-                        }
+                            background-color: rgba(0, 0, 0, 0.6);
+                            top: 0;
+                            left: 0;
+                            opacity: 0;
+                            transition: .3s;
+                        } 
 
                         >div {
                             display: block;
@@ -928,26 +971,31 @@
 
                             .list-title {
                                 position: absolute;
-                                bottom: 0%;
+                                bottom: -100%;
                                 left: 50%;
-                                transform: translate(-50%, -50%);
+                                transform: translateX(-50%);
                                 color: var(--white);
                                 z-index: 99;
                                 text-align: center;
                                 width: 100%;
-                                .date{
-                                    border: 1px solid #ffffff;
+                                transition: .4s;
+
+                                .date {
+                                    width: 100%;
+
                                     h3 {
-                                        font-size: 2.2rem;
+                                        font-size: 4.5rem;
+                                        // -webkit-text-stroke: 1px var(--mainColor100-color);
+                                        // -webkit-text-fill-color: transparent;
                                         margin-bottom: 10px;
                                     }
-    
+
                                     p {
                                         font-size: 1.3rem;
                                     }
                                 }
 
-                             
+
                             }
                         }
                     }
