--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -75,7 +75,7 @@
   filter: brightness(0.6);
 }
 #work .work-list li .img01, #work .work-list li.work01::before {
-  background-image: url(/src/assets/work.jpg);
+  background-image: url(/src/assets/work1.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -85,7 +85,7 @@
   background-position: center center;
 }
 #work .work-list li .img03, #work .work-list li.work03::before {
-  background-image: url(/src/assets/work3.webp);
+  background-image: url(/src/assets/work3.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -95,51 +95,56 @@
   background-position: center center;
 }
 #work .work-list li .img05, #work .work-list li.work05::before {
-  background-image: url(/src/assets/work5.jpg);
+  background-image: url(/src/assets/work05.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img06, #work .work-list li.work06::before {
-  background-image: url(/src/assets/work6.jpg);
+  background-image: url(/src/assets/work06.png);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img07, #work .work-list li.work07::before {
-  background-image: url(/src/assets/work7.jpg);
+  background-image: url(/src/assets/work6.png);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img08, #work .work-list li.work08::before {
-  background-image: url(/src/assets/work8.jpg);
+  background-image: url(/src/assets/work7.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img09, #work .work-list li.work09::before {
-  background-image: url(/src/assets/work9.webp);
+  background-image: url(/src/assets/work8.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img10, #work .work-list li.work10::before {
-  background-image: url(/src/assets/work10.jpg);
+  background-image: url(/src/assets/work9.webp);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img11, #work .work-list li.work11::before {
-  background-image: url(/src/assets/work11.jpg);
+  background-image: url(/src/assets/work10.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img12, #work .work-list li.work12::before {
-  background-image: url(/src/assets/work12.jpg);
+  background-image: url(/src/assets/work11.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img13, #work .work-list li.work13::before {
-  background-image: url(/src/assets/work13.jpg);
+  background-image: url(/src/assets/work12.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img14, #work .work-list li.work14::before {
+  background-image: url(/src/assets/work13.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img15, #work .work-list li.work15::before {
   background-image: url(/src/assets/work14.jpg);
   background-repeat: no-repeat;
   background-position: center center;
@@ -216,18 +221,6 @@
     height: 350px;
     padding: 5%;
     margin: auto;
-  }
-  #work .inner .work-list li::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: brightness(0.1);
   }
   #work .inner .work-list li:hover .img-box {
     -webkit-clip-path: circle(100% at 50% 50%);
@@ -427,6 +420,9 @@
   #work .inner .work-desc .desc-index li.on b {
     transform: translateY(0);
   }
+  #work .inner .work-desc .desc-index li.on .icon {
+    transform: translateY(0);
+  }
   #work .inner .work-desc .desc-index li a {
     display: block;
     color: #fff;
@@ -445,6 +441,10 @@
     transform: translateY(50px);
     transition: 0.45s;
   }
+  #work .inner .work-desc .desc-index li a .icon {
+    transform: translateY(50px);
+    transition: 0.65s;
+  }
   #work .inner .work-list {
     gap: 30px;
   }
@@ -458,11 +458,6 @@
     width: 500px;
     height: 400px;
     position: relative;
-  }
-  #work .inner .work-list > div li:hover .img-box {
-    -webkit-clip-path: circle(100% at 50% 50%);
-            clip-path: circle(100% at 50% 50%);
-    filter: brightness(1);
   }
   #work .inner .work-list > div li:hover .img01 {
     filter: brightness(0.6);
@@ -513,7 +508,6 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    filter: brightness(0.1);
   }
   #work .inner .work-list > div li > div {
     display: block;
@@ -525,20 +519,6 @@
   #work .inner .work-list > div li > div .icon {
     display: none;
   }
-  #work .inner .work-list > div li > div .img-box {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    /* 마스크 이용해서 안보이게 하는 영역 */
-    -webkit-clip-path: circle(20% at 50% 50%);
-            clip-path: circle(20% at 50% 50%);
-    transition: 0.6s;
-  }
   #work .inner .work-list > div li > div .list-title {
     position: absolute;
     bottom: 0%;
@@ -548,6 +528,10 @@
     z-index: 99;
     font-size: 20rem;
     width: 100%;
+  }
+  #work .inner .work-list > div li > div .list-title h3 {
+    font-size: 4rem;
+    margin-bottom: 10px;
   }
   #work .inner .work-list > div li > div .explanation {
     display: none;
@@ -633,6 +617,11 @@
     display: block;
     color: #fff;
   }
+  #work .inner .work-desc .desc-index li a h2 {
+    -webkit-text-stroke: 1px var(--mainColor100-color);
+    -webkit-text-fill-color: transparent;
+    font-size: 7rem;
+  }
   #work .inner .work-desc .desc-index li a p {
     color: var(--mainColor100-color);
     font-size: 1.3rem;
@@ -656,6 +645,11 @@
   #work .inner .work-desc .desc-index li a .summary > div img {
     height: 50px;
   }
+  #work .inner .work-desc .desc-index li a .summary h2 {
+    -webkit-text-stroke: 1px var(--mainColor100-color);
+    -webkit-text-fill-color: transparent;
+    font-size: 7rem;
+  }
   #work .inner .work-list {
     align-items: center;
   }
@@ -669,18 +663,25 @@
     height: 400px;
     border: 1px solid var(--mainColor300-color);
     position: relative;
+    overflow: hidden;
   }
-  #work .inner .work-list > div li::before {
+  #work .inner .work-list > div li:hover .list-title {
+    bottom: 30%;
+    transform: translateY(0, -50%);
+  }
+  #work .inner .work-list > div li:hover::after {
+    opacity: 1;
+  }
+  #work .inner .work-list > div li::after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: brightness(0.1);
+    background-color: rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.3s;
   }
   #work .inner .work-list > div li > div {
     display: block;
@@ -691,19 +692,20 @@
   }
   #work .inner .work-list > div li > div .list-title {
     position: absolute;
-    bottom: 0%;
+    bottom: -100%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     color: var(--white);
     z-index: 99;
     text-align: center;
     width: 100%;
+    transition: 0.4s;
   }
   #work .inner .work-list > div li > div .list-title .date {
-    border: 1px solid #ffffff;
+    width: 100%;
   }
   #work .inner .work-list > div li > div .list-title .date h3 {
-    font-size: 2.2rem;
+    font-size: 4.5rem;
     margin-bottom: 10px;
   }
   #work .inner .work-list > div li > div .list-title .date p {
