--- a/src/css/pages/scss/contact.scss
+++ b/src/css/pages/scss/contact.scss
@@ -239,7 +239,8 @@
                 top: 15%;
 
                 h2 {
-                    font-size: 10rem;
+                    font-size: 11rem;
+                    font-weight: 600;
                 }
 
                 p {
@@ -264,7 +265,8 @@
                 }
 
                 .endless {
-                    font-size: 10rem;
+                    font-size: 11rem;
+                    font-weight: 600;
                 }
 
                 span {
