--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -123,6 +123,7 @@
     justify-content: space-between;
     padding: 0 30px;
     gap: 0px;
+    min-width: 600px;
   }
   #about .inner .me {
     width: 40%;
@@ -220,6 +221,7 @@
     white-space: nowrap;
   }
   #about .inner {
+    min-width: 1200px;
     position: relative;
     margin-top: 4%;
     height: 200vh;
