--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -169,6 +169,7 @@
             justify-content: space-between;
             padding: 0 30px;
             gap: 0px;
+            min-width: 600px;
 
             .me {
                 width: 40%;
@@ -299,6 +300,7 @@
         }
 
         .inner {
+            min-width: 1200px;
             position: relative;
             margin-top: 4%;
             height: 200vh;
