--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -35,45 +35,6 @@
 #work .work-list li {
   overflow: hidden;
 }
-#work .work-list li:hover .img01 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img02 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img03 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img04 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img05 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img06 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img07 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img08 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img09 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img10 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img11 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img12 {
-  filter: brightness(0.6);
-}
-#work .work-list li:hover .img13 {
-  filter: brightness(0.6);
-}
 #work .work-list li .img01, #work .work-list li.work01::before {
   background-image: url(/src/assets/work1.jpg);
   background-repeat: no-repeat;
@@ -95,57 +56,57 @@
   background-position: center center;
 }
 #work .work-list li .img05, #work .work-list li.work05::before {
-  background-image: url(/src/assets/work05.jpg);
+  background-image: url(/src/assets/work5.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img06, #work .work-list li.work06::before {
-  background-image: url(/src/assets/work06.png);
+  background-image: url(/src/assets/work6.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img07, #work .work-list li.work07::before {
-  background-image: url(/src/assets/work6.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-#work .work-list li .img08, #work .work-list li.work08::before {
   background-image: url(/src/assets/work7.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
+#work .work-list li .img08, #work .work-list li.work08::before {
+  background-image: url(/src/assets/work8.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 #work .work-list li .img09, #work .work-list li.work09::before {
-  background-image: url(/src/assets/work8.jpg);
+  background-image: url(/src/assets/work9.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
 #work .work-list li .img10, #work .work-list li.work10::before {
-  background-image: url(/src/assets/work9.webp);
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-#work .work-list li .img11, #work .work-list li.work11::before {
   background-image: url(/src/assets/work10.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
-#work .work-list li .img12, #work .work-list li.work12::before {
+#work .work-list li .img11, #work .work-list li.work11::before {
   background-image: url(/src/assets/work11.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
-#work .work-list li .img13, #work .work-list li.work13::before {
+#work .work-list li .img12, #work .work-list li.work12::before {
   background-image: url(/src/assets/work12.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
-#work .work-list li .img14, #work .work-list li.work14::before {
+#work .work-list li .img13, #work .work-list li.work13::before {
   background-image: url(/src/assets/work13.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
-#work .work-list li .img15, #work .work-list li.work15::before {
+#work .work-list li .img14, #work .work-list li.work14::before {
   background-image: url(/src/assets/work14.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img15, #work .work-list li.work15::before {
+  background-image: url(/src/assets/work15.jpg);
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -221,53 +182,27 @@
     height: 350px;
     padding: 5%;
     margin: auto;
+    position: relative;
   }
-  #work .inner .work-list li:hover .img-box {
-    -webkit-clip-path: circle(100% at 50% 50%);
-            clip-path: circle(100% at 50% 50%);
-    filter: brightness(1);
+  #work .inner .work-list li:hover::after {
+    opacity: 1;
   }
-  #work .inner .work-list li:hover .img01 {
-    filter: brightness(0.5);
+  #work .inner .work-list li::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.3s;
   }
-  #work .inner .work-list li:hover .img02 {
-    filter: brightness(0.5);
+  #work .inner .work-list li:hover .list-title {
+    transform: translateX(0);
   }
-  #work .inner .work-list li:hover .img03 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img04 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img05 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img06 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img07 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img08 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img09 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img10 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img11 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img12 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img13 {
-    filter: brightness(0.5);
-  }
-  #work .inner .work-list li:hover .img14 {
-    filter: brightness(0.5);
+  #work .inner .work-list li:hover .explanation {
+    transform: translateX(0);
   }
   #work .inner .work-list li > div {
     width: 90%;
@@ -287,8 +222,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     /* 마스크 이용해서 안보이게 하는 영역 */
-    -webkit-clip-path: circle(20% at 50% 50%);
-            clip-path: circle(20% at 50% 50%);
     transition: 0.6s;
   }
   #work .inner .work-list li > div .list-title {
@@ -297,13 +230,15 @@
     width: 98%;
     display: flex;
     justify-content: space-between;
+    transform: translateX(120%);
+    transition: 0.55s;
   }
   #work .inner .work-list li > div .list-title .date {
     display: flex;
     flex-direction: column-reverse;
   }
   #work .inner .work-list li > div .list-title .date h3 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     margin-bottom: 10px;
   }
   #work .inner .work-list li > div .list-title .date p {
@@ -318,10 +253,13 @@
   #work .inner .work-list li > div .explanation {
     position: relative;
     z-index: 99;
+    transform: translateX(-100%);
+    transition: 0.55s;
   }
   #work .inner .work-list li > div .explanation p {
     font-size: 1.2rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
+    margin-bottom: 10px;
   }
   #work .inner .work-list li > div .explanation .summary {
     font-size: 1rem;
@@ -350,6 +288,7 @@
   }
   #work .inner {
     width: 100%;
+    min-width: 600px;
     height: 600px;
     margin-top: 5%;
     overflow-x: hidden;
@@ -411,6 +350,10 @@
     transform: translate(-50%, -50%);
     width: 100%;
   }
+  #work .inner .work-desc .desc-index li a .summary {
+    position: relative;
+    height: 70px;
+  }
   #work .inner .work-desc .desc-index li.on {
     opacity: 1;
   }
@@ -421,28 +364,30 @@
     transform: translateY(0);
   }
   #work .inner .work-desc .desc-index li.on .icon {
-    transform: translateY(0);
+    transform: translate(-50%, 0%);
   }
-  #work .inner .work-desc .desc-index li a {
-    display: block;
-    color: #fff;
-  }
-  #work .inner .work-desc .desc-index li a p {
+  #work .inner .work-desc .desc-index li p {
     color: var(--mainColor100-color);
-    font-size: 2rem;
+    font-size: 1.3rem;
     font-weight: 300;
     transform: translateY(50px);
     transition: 0.35s;
+    line-height: 2rem;
   }
-  #work .inner .work-desc .desc-index li a b {
-    font-size: 1.5rem;
+  #work .inner .work-desc .desc-index li b {
+    font-size: 1rem;
     display: block;
     padding: 0 5px;
     transform: translateY(50px);
     transition: 0.45s;
+    line-height: 2rem;
   }
-  #work .inner .work-desc .desc-index li a .icon {
-    transform: translateY(50px);
+  #work .inner .work-desc .desc-index li .icon {
+    height: 50px;
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    transform: translate(-50%, 130%);
     transition: 0.65s;
   }
   #work .inner .work-list {
@@ -459,44 +404,23 @@
     height: 400px;
     position: relative;
   }
-  #work .inner .work-list > div li:hover .img01 {
-    filter: brightness(0.6);
+  #work .inner .work-list > div li:hover::after {
+    opacity: 1;
   }
-  #work .inner .work-list > div li:hover .img02 {
-    filter: brightness(0.6);
+  #work .inner .work-list > div li::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.3s;
   }
-  #work .inner .work-list > div li:hover .img03 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img04 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img05 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img06 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img07 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img08 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img09 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img10 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img11 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img12 {
-    filter: brightness(0.6);
-  }
-  #work .inner .work-list > div li:hover .img13 {
-    filter: brightness(0.6);
+  #work .inner .work-list > div li:hover .list-title {
+    bottom: 30%;
+    transform: translateX(-50%);
   }
   #work .inner .work-list > div li::before {
     content: "";
@@ -521,17 +445,24 @@
   }
   #work .inner .work-list > div li > div .list-title {
     position: absolute;
-    bottom: 0%;
+    bottom: -100%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     color: var(--white);
     z-index: 99;
-    font-size: 20rem;
+    text-align: center;
+    width: 100%;
+    transition: 0.4s;
+  }
+  #work .inner .work-list > div li > div .list-title .date {
     width: 100%;
   }
-  #work .inner .work-list > div li > div .list-title h3 {
-    font-size: 4rem;
+  #work .inner .work-list > div li > div .list-title .date h3 {
+    font-size: 4.5rem;
     margin-bottom: 10px;
+  }
+  #work .inner .work-list > div li > div .list-title .date p {
+    font-size: 1.3rem;
   }
   #work .inner .work-list > div li > div .explanation {
     display: none;
@@ -560,6 +491,7 @@
   }
   #work .inner {
     width: 100%;
+    min-width: 1200px;
     height: 500px;
     margin-top: 5%;
     overflow-x: hidden;
@@ -579,7 +511,7 @@
     background-color: var(--black);
     width: 100%;
     height: 100%;
-    padding: 0 5%;
+    padding: 0 3%;
   }
   #work .inner .work-desc .work-title {
     color: var(--mainColor100-color);
@@ -594,7 +526,7 @@
     display: block;
   }
   #work .inner .work-desc .desc-index {
-    width: 400px;
+    width: 500px;
     height: 100%;
     position: relative;
   }
@@ -620,7 +552,7 @@
   #work .inner .work-desc .desc-index li a h2 {
     -webkit-text-stroke: 1px var(--mainColor100-color);
     -webkit-text-fill-color: transparent;
-    font-size: 7rem;
+    font-size: 6rem;
   }
   #work .inner .work-desc .desc-index li a p {
     color: var(--mainColor100-color);
