--- a/src/css/pages/scss/project.scss
+++ b/src/css/pages/scss/project.scss
@@ -2,6 +2,7 @@ body {
     height: 600vh;
 }
 
+
 #project {
     height: 100%;
     width: 100%;
@@ -210,9 +211,41 @@ body {
                                     width: 90%;
                                     margin: auto;
                                     height: 450px;
-                                    border: 1px solid #cbcbcb;
+                                    border: 1px solid var(--mainColor300-color);
                                     background: no-repeat center;
                                     background-size: cover;
+                                }
+                                &.slide01{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project1.png);
+                                    }
+                                }
+                                &.slide02{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project2.png);
+                                    }
+                                }
+                                &.slide03{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project3.png);
+                                    }
+                                }
+                                &.slide04{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project4.png);
+                                    }
                                 }
                             }
                         }
@@ -382,12 +415,41 @@ body {
                         ul {
                             li {
                                 .img {
-                                    flex-shrink: 0;
-                                    width: 350px;
-                                    height: 450px;
-                                    border: 1px solid #cbcbcb;
+                                    border: 1px solid var(--mainColor300-color);
                                     background: no-repeat center;
                                     background-size: cover;
+                                }
+                                &.slide01{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project1.png);
+                                    }
+                                }
+                                &.slide02{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project2.png);
+                                    }
+                                }
+                                &.slide03{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project3.png);
+                                    }
+                                }
+                                &.slide04{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project4.png);
+                                    }
                                 }
                             }
                         }
@@ -405,6 +467,7 @@ body {
                                     align-items: center;
                                     pointer-events: all;
                                     transition: .35s;
+
 
                                     &.on {
                                         opacity: 1 !important;
@@ -568,13 +631,43 @@ body {
                         ul {
                             li {
                                 .img {
-                                    flex-shrink: 0;
-                                    width: 350px;
-                                    height: 450px;
-                                    border: 1px solid #6fff4f;
+                                    border: 1px solid var(--mainColor300-color);
                                     background: no-repeat center;
                                     background-size: cover;
                                 }
+                                &.slide01{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project1.png);
+                                    }
+                                }
+                                &.slide02{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project2.png);
+                                    }
+                                }
+                                &.slide03{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project3.png);
+                                    }
+                                }
+                                &.slide04{
+                                    .img {
+                                        flex-shrink: 0;
+                                        width: 350px;
+                                        height: 450px;
+                                        background-image: url(/src/assets/project4.png);
+                                    }
+                                }
+                               
                             }
                         }
 
@@ -680,18 +773,3 @@ body {
     }
 }
 
-#project .slide01 .img {
-    background-image: url('/src/assets/project1.png')
-}
-
-#project .slide_area ul li.slide02 .img {
-    background-image: url('/src/assets/project1.png')
-}
-
-#project .slide_area ul li.slide03 .img {
-    background-image: url('/src/assets/project1.png')
-}
-
-#project .slide_area ul li.slide04 .img {
-    background-image: url('/src/assets/project1.png')
-}
